# 3D-Scene-Reconstruction-with-drone

./: ReadMe.md
scene_reconstruction/: package.xml  setup.cfg  setup.py
scene_reconstruction/best_frames/: best_frames.py
trajectory/: CMakeLists.txt  package.xml
trajectory/src/: circular.cpp
